--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         resultDiv.innerHTML = '<div class="loading">⏳ Checking website status...</div>';
         
         try {
-                const response = await fetch('https://your-app-name.onrender.com/check-url', {
+                const response = await fetch('https://guardian-pulse-test.onrender.com/check-url', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
